# sqlalchemy-cloudflare-d1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: DEVELOPMENT.md
.github/workflows/: ci.yml  release.yml
examples/restapi/: example.py
examples/workers/: README.md  db_init.sql  pyproject.toml  wrangler.jsonc
examples/workers/src/: entry.py
src/sqlalchemy_cloudflare_d1/: __init__.py  compiler.py  connection.py  dialect.py  dialect_async.py
tests/: __init__.py  conftest.py  test_dialect.py  test_utils.py  test_worker_integration.py
tests/integration/: test_restapi_integration.py  test_worker_integration.py
